# Pixel-Warriors-dependency-menu

./: .gitignore  CMakeLists.txt  CMakeLists.txt~
Libs/LibKyraText/: CMakeLists.txt
Libs/LibKyraText/include/: LibKyraText.h
Libs/LibKyraText/src/: LibKyraText.cpp
SFML/include/SFML/Graphics/: RectangleShape.hpp
include/: cMain.hpp  library.h  library.h~
src/: cMain.cpp~  library.cpp  library.cpp~
